# graphiti-marinara

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
graphiti-api/: Dockerfile  pyproject.toml  requirements.txt
graphiti-api/src/: __init__.py  config.py  graphiti_client.py  main.py
graphiti-api/src/embeddings/: marinara_sidecar.py  openai_compatible.py
graphiti-api/src/routes/: campaigns.py  episodes.py  health.py  search.py  tools.py
graphiti-api/src/schema/: __init__.py  edges.py  entities.py
marinara-agents/: graphiti-bundle.json  ingest-agent.json  retrieve-agent.json
scripts/: register-marinara-integration.py  reset-graph.bat  start.bat  stop.bat  test-roundtrip.py
